force-app/main/default/objects/Contact/fields/Pan__c.field-meta.xml
<CustomField>
    <fullName>Pan__c</fullName>
    <label>Pan</label>
    <length>60</length>
    <type>Text</type>
</CustomField>