force-app/main/default/objects/Contact/fields/Phone_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Phone_Hidden__c</fullName>
    <formula>&apos;+91&apos;+ MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Hidden</label>
    <type>Text</type>
</CustomField>