force-app/main/default/objects/Contact/fields/WhatsApp_URL__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://api.whatsapp.com/send?phone= &quot;+ Phone_Hidden__c +&quot;&amp;text=&quot;, &quot;Click for Whatsapp&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WhatsApp URL</label>
    <type>Text</type>
</CustomField>